--- a/orchard.css
+++ b/orchard.css
@@ -1,85 +1,151 @@
 body {
-background:#0E1414;
-color:#FFF;
-font-family:'Open Sans',sans-serif;
-padding:1em;
+	background: #0e1414;
+	color: #fff;
+	font-family: "Open Sans", sans-serif;
+	padding: 1em;
 }
 
 .modal {
-color:#0E1414;
+	color: #0e1414;
 }
 
 p {
-font-size:18px;
-font-weight:300;
-letter-spacing:0;
-line-height:30px;
+	font-size: 18px;
+	font-weight: 300;
+	letter-spacing: 0;
+	line-height: 30px;
 }
 
-h2,h3,h5,.cta {
-text-transform:uppercase;
+h2,
+h3,
+h5,
+.cta {
+	text-transform: uppercase;
 }
 
 h2 {
-color:#FFF;
-letter-spacing:.81px;
-margin:60px 0;
-font:300 42px/57px "Open Sans";
+	color: #fff;
+	letter-spacing: 0.81px;
+	margin: 60px 0;
+	font: 300 42px/57px "Open Sans";
 }
 
 h3 {
-color:#FFF;
-letter-spacing:.5px;
-border-bottom:1px solid #FFF;
-padding-bottom:18px;
-margin-bottom:18px;
-font:300 26px/36px "Open Sans";
+	color: #fff;
+	letter-spacing: 0.5px;
+	border-bottom: 1px solid #fff;
+	padding-bottom: 18px;
+	margin-bottom: 18px;
+	font: 300 26px/36px "Open Sans";
 }
 
 h4 {
-color:#FFF;
-letter-spacing:0;
-font:600 18px/30px "Open Sans";
+	color: #fff;
+	letter-spacing: 0;
+	font: 600 18px/30px "Open Sans";
 }
 
 h5.be-mindful {
-color:#CF1430;
-letter-spacing:0;
-font:600 16px/28px "Open Sans";
+	color: #cf1430;
+	letter-spacing: 0;
+	font: 600 16px/28px "Open Sans";
 }
 
 .article-p {
-color:#C2C2C2;
-letter-spacing:0;
-font:300 16px/28px "Open Sans";
+	color: #c2c2c2;
+	letter-spacing: 0;
+	font: 300 16px/28px "Open Sans";
 }
 
 #latest article figure img {
-border-bottom:4px solid #CF1430;
+	border-bottom: 4px solid #cf1430;
 }
 
 .cta {
-color:#FFF;
-letter-spacing:0;
-text-decoration:none;
-margin:0;
-padding:0 0 4px;
-border-bottom:1px solid #CF1430;
-transition:color 1s;
-font:600 16px/30px "Open Sans";
+	color: #fff;
+	letter-spacing: 0;
+	text-decoration: none;
+	margin: 0;
+	padding: 0 0 4px;
+	border-bottom: 1px solid #cf1430;
+	transition: color 1s;
+	font: 600 16px/30px "Open Sans";
 }
 
 .cta:hover {
-color:#CF1430;
-transition:color 1s;
+	color: #cf1430;
+	transition: color 1s;
 }
 
-.top-link img {
-transition:opacity 1s ease;
-opacity:1;
+/** Animation from https://animate.style/ */
+:root {
+	--animate-duration: 1.75s;
+	--animate-delay: 1s;
+	--animate-repeat: 1;
 }
+.animate {
+	-webkit-animation-duration: 1.75s;
+	animation-duration: 1.75s;
+	-webkit-animation-duration: var(--animate-duration);
+	animation-duration: var(--animate-duration);
+	-webkit-animation-fill-mode: both;
+	animation-fill-mode: both;
+}
+@-webkit-keyframes heartBeat {
+	0% {
+		-webkit-transform: scale(1);
+		transform: scale(1);
+	}
 
-a.top-link:hover img {
-transition:opacity 1s ease;
-opacity:.45;
+	14% {
+		-webkit-transform: scale(1.05);
+		transform: scale(1.05);
+	}
+
+	28% {
+		-webkit-transform: scale(1);
+		transform: scale(1);
+	}
+
+	42% {
+		-webkit-transform: scale(1.05);
+		transform: scale(1.05);
+	}
+
+	70% {
+		-webkit-transform: scale(1);
+		transform: scale(1);
+	}
+}
+@keyframes heartBeat {
+	0% {
+		-webkit-transform: scale(1);
+		transform: scale(1);
+	}
+
+	14% {
+		-webkit-transform: scale(1.05);
+		transform: scale(1.05);
+	}
+
+	28% {
+		-webkit-transform: scale(1);
+		transform: scale(1);
+	}
+
+	42% {
+		-webkit-transform: scale(1.05);
+		transform: scale(1.05);
+	}
+
+	70% {
+		-webkit-transform: scale(1);
+		transform: scale(1);
+	}
+}
+a.top-link:hover {
+	-webkit-animation-name: heartBeat;
+	animation-name: heartBeat;
+	-webkit-animation-timing-function: ease-in-out;
+	animation-timing-function: ease-in-out;
 }
